testsuite/tests/parser/should_fail/patFail002.hs
module PatFail002 where

f (let a = x in a) = _
