testsuite/tests/parser/should_fail/patFail002.stderr

patFail002.hs:3:4: error: [GHC-78892]
    (let ... in ...)-syntax in pattern
